Fix scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -42,17 +42,17 @@
 
 ::-webkit-scrollbar-track
 {
-  background: var(--clr-under-text);
+  background: var(--clr-background);
 }
 
 ::-webkit-scrollbar-track:hover
 {
-  background: var(--clr-text);
+  background: var(--clr-active);
 }
 
 ::-webkit-scrollbar-thumb
 {
-  background: var(--clr-background);
+  background: var(--clr-interact);
   border: 1.5px solid transparent;
   background-clip: content-box;
   border-radius: 100vw;
